--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/AsignarTareas.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/AsignarTareas.cshtml
@@ -2443,7 +2443,8 @@
                   'Scrap permitido (%)', 'Piezas Dobles', 'Reaplicación', 'Req. conciliación Puntas y colas', 'Conciliación Scrap Ingenieria', 'Pais Origen',
                   'S&P 1 (antes IHS)', 'S&P 2 (antes IHS)', 'S&P 3 (antes IHS)', 'Propulsion System', 'Program', '¿Almacen Norte?', 'Tipo Transporte', 'Stacks por Paquete', 'Tipo de Pallet', 'tkMM SOP', 'tkMM EOP'
                   , 'Piezas por auto', 'Piezas por golpe', 'Piezas por paquete', 'Peso Inicial', 'Peso Max (KG)', 'Peso Maximo Tolerancia Positiva', 'Peso Maximo Tolerancia Negativa'
-                  , 'Peso Min (KG)', 'Peso Mínimo Tolerancia Positiva', 'Peso Mínimo Tolerancia Negativa'
+                  , 'Peso Min (KG)', 'Peso Mínimo Tolerancia Positiva', 'Peso Mínimo Tolerancia Negativa',
+                  'Status DM', 'ID Part Number', 'ID Tool', 'ID Material Obsoleto', 'ID Clasificacion/Motivo', 'Tour Description', 'Consecutivo'
               ];
 
       var porcentajeCol = GetColFromName("Scrap permitido (%)", colHeader);
@@ -2543,6 +2544,12 @@
                           case GetColFromName("tkMM SOP", colHeader):
                           case GetColFromName("tkMM EOP", colHeader):
                           case GetColFromName("Pais Origen", colHeader):
+                          case GetColFromName("Status DM", colHeader):
+                          case GetColFromName("ID Part Number", colHeader):
+                          case GetColFromName("ID Tool", colHeader):
+                          case GetColFromName("ID Material Obsoleto", colHeader):
+                          case GetColFromName("ID Clasificacion/Motivo", colHeader):
+                          case GetColFromName("Tour Description", colHeader):
                               applyClass(TH, 'HTOrange');
                               break;
                           case 0: //columna fijada
@@ -2570,6 +2577,7 @@
                           , GetColFromName("Stacks por Paquete", colHeader)
                           , GetColFromName("Tipo de Pallet", colHeader)
                           , GetColFromName("Pais origen", colHeader)
+                          , GetColFromName("Consecutivo", colHeader)
                       ], //contains ID
                   },
                   licenseKey: 'non-commercial-and-evaluation',
@@ -2645,7 +2653,8 @@
              'Scrap permitido (%)', 'Piezas Dobles', 'Reaplicación', 'Req. conciliación Puntas y colas', 'Conciliación Scrap Ingenieria', 'Pais Origen',
              'S&P 1 (antes IHS)', 'S&P 2 (antes IHS)', 'S&P 3 (antes IHS)', 'Propulsion System', 'Program', '¿Almacen Norte?', 'Tipo Transporte', 'Stacks por Paquete', 'Tipo de Pallet', 'tkMM SOP', 'tkMM EOP'
              , 'Piezas por auto', 'Piezas por golpe', 'Piezas por paquete', 'Peso Inicial', 'Peso Maximo Tolerancia Positiva', 'Peso Maximo Tolerancia Negativa'
-             , 'Peso Min (KG)', 'Peso Mínimo Tolerancia Positiva', 'Peso Mínimo Tolerancia Negativa'
+             , 'Peso Min (KG)', 'Peso Mínimo Tolerancia Positiva', 'Peso Mínimo Tolerancia Negativa',
+             'Status DM', 'ID Part Number', 'ID Tool', 'ID Material Obsoleto', 'ID Clasificacion/Motivo', 'Tour Description', 'Consecutivo'
 
          ];
 
@@ -2746,6 +2755,12 @@
                  case GetColFromName("tkMM SOP", colHeader):
                  case GetColFromName("tkMM EOP", colHeader):
                  case GetColFromName("Pais Origen", colHeader):
+                 case GetColFromName("Status DM", colHeader):
+                 case GetColFromName("ID Part Number", colHeader):
+                 case GetColFromName("ID Tool", colHeader):
+                 case GetColFromName("ID Material Obsoleto", colHeader):
+                 case GetColFromName("ID Clasificacion/Motivo", colHeader):
+                 case GetColFromName("Tour Description", colHeader):
                      applyClass(TH, 'HTOrange');
                      break;
                  case 0:
@@ -2769,6 +2784,7 @@
                  , GetColFromName("Stacks por Paquete", colHeader)
                  , GetColFromName("Tipo de Pallet", colHeader)
                  , GetColFromName("Pais origen", colHeader)
+                 , GetColFromName("Consecutivo", colHeader)
              ], //contains ID
          },
          licenseKey: 'non-commercial-and-evaluation',
@@ -2845,7 +2861,8 @@
          'Scrap permitido (%)', 'Piezas Dobles', 'Reaplicación', 'Req. conciliación Puntas y colas', 'Conciliacion Scrap Ingeniería', 'Pais Origen',
          'S&P 1 (antes IHS)', 'S&P 2 (antes IHS)', 'S&P 3 (antes IHS)', 'Propulsion System', 'Program', '¿Almacen Norte?', 'Tipo Transporte', 'Stacks por Paquete', 'Tipo de Pallet', 'tkMM SOP', 'tkMM EOP'
          , 'Peso Inicial', 'Peso Max (KG)', 'Peso Maximo Tolerancia Positiva', 'Peso Maximo Tolerancia Negativa'
-         , 'Peso Min (KG)', 'Peso Mínimo Tolerancia Positiva', 'Peso Mínimo Tolerancia Negativa'
+         , 'Peso Min (KG)', 'Peso Mínimo Tolerancia Positiva', 'Peso Mínimo Tolerancia Negativa',
+         'Status DM', 'ID Part Number', 'ID Tool', 'ID Material Obsoleto', 'ID Clasificacion/Motivo', 'Tour Description','Consecutivo', 'ConsecutivoTool'
      ];
      let container;
      switch (tipoPlatina) {
@@ -2963,6 +2980,12 @@
                  case GetColFromName("tkMM SOP", colHeader):
                  case GetColFromName("tkMM EOP", colHeader):
                  case GetColFromName("Pais Origen", colHeader):
+                 case GetColFromName("Status DM", colHeader):
+                 case GetColFromName("ID Part Number", colHeader):
+                 case GetColFromName("ID Tool", colHeader):
+                 case GetColFromName("ID Material Obsoleto", colHeader):
+                 case GetColFromName("ID Clasificacion/Motivo", colHeader):
+                 case GetColFromName("Tour Description", colHeader):
                      applyClass(TH, 'HTOrange');
                      break;
                  case 0:
@@ -2977,6 +3000,8 @@
                  , GetColFromName("Peso neto REAL bascula (kg)", colHeader)
                  , GetColFromName("Peso bruto REAL bascula (kg)", colHeader)
                  , GetColFromName("Pais origen", colHeader)
+                 , GetColFromName("Consecutivo", colHeader)
+                 , GetColFromName("ConsecutivoTool", colHeader)
              ], //contains ID
          },
          licenseKey: 'non-commercial-and-evaluation',
